# think

./: .gitignore  .pre-commit-config.yaml  INTERNALS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: build_docs.py  docs.md  docs.md.jinja2
examples/: agent.py  ask.py  chatbot.py  extract.py  parsing.py  parsing_output.py  pdf.py  rag.py  structured.py  tools.py  vision.py
tests/: conftest.py  test_agent.py  test_ai.py  test_chat.py  test_parser.py  test_prompt.py  test_tool.py
tests/integration/: test_llm.py
tests/llm/: test_anthropic.py  test_anthropic_adapter.py  test_base.py  test_bedrock_adapter.py  test_chat.py  test_google_adapter.py  test_litellm_adapter.py  test_ollama.py  test_ollama_adapter.py  test_openai.py  test_openai_adapter.py
tests/rag/: test_eval.py  test_rag.py
think/: __init__.py  agent.py  ai.py  chat.py  parser.py  prompt.py  tool.py
think/llm/: __init__.py  anthropic.py  base.py  bedrock.py  chat.py  google.py  groq.py  litellm.py  ollama.py  openai.py  tool.py  utils.py
think/rag/: base.py  chroma_rag.py  eval.py  pinecone_rag.py  txtai_rag.py
