[project]
name = "think-llm"
version = "0.0.8"
description = "Create programs that think, using LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.9.2", "jinja2>=3.1.2", "httpx>=0.27.2"]
authors = [{ name = "Senko Rasic", email = "senko@senko.net" }]
license = { text = "MIT" }
homepage = "https://github.com/senko/think"
repository = "https://github.com/senko/think"
keywords = ["ai", "llm", "rag"]

[project.optional-dependencies]
openai = ["openai>=1.53.0"]
anthropic = ["anthropic>=0.37.1"]
gemini = ["google-generativeai>=0.8.3"]
groq = ["groq>=0.12.0"]
ollama = ["ollama>=0.3.3"]
bedrock = ["aioboto3>=13.2.0"]
txtai = ["txtai>=8.1.0"]
chromadb = ["chromadb>=0.6.2"]
pinecone = ["pinecone>=5.4.2"]

all = [
    "openai>=1.53.0",
    "anthropic>=0.37.1",
    "google-generativeai>=0.8.3",
    "groq>=0.12.0",
    "ollama>=0.3.3",
    "txtai>=8.1.0",
    "chromadb>=0.6.2",
    "pinecone>=5.4.2",
    "pinecone-client>=4.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pytest>=8.3.2",
    "pytest-coverage>=0.0",
    "pytest-asyncio>=0.23.8",
    "pre-commit>=3.8.0",
    "python-dotenv>=1.0.1",
    "openai>=1.53.0",
    "anthropic>=0.37.1",
    "google-generativeai>=0.8.3",
    "groq>=0.12.0",
    "ollama>=0.3.3",
    "txtai>=8.1.0",
    "chromadb>=0.6.2",
    "pinecone>=5.4.2",
    "pinecone-client>=4.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["think"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=think --no-cov-on-fail"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
