[project]
name = "think-llm"
version = "0.0.11"
description = "Create programs that think, using LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.4",
    "jinja2>=3.1.2",
    "httpx>=0.27.2",
    "litellm>=1.75.7",
]
authors = [{ name = "Senko Rasic", email = "senko@senko.net" }]
license = { text = "MIT" }
homepage = "https://github.com/senko/think"
repository = "https://github.com/senko/think"
keywords = ["ai", "llm", "rag", "agents"]

[project.optional-dependencies]
openai = ["openai>=1.53.0"]
anthropic = ["anthropic>=0.74.1"]
gemini = ["google-generativeai>=0.8.5"]
groq = ["groq>=0.36.0"]
ollama = ["ollama>=0.6.1"]
bedrock = ["aioboto3>=15.5.0"]
txtai = ["txtai>=9.2.0"]
chromadb = ["chromadb>=1.3.5"]
pinecone = ["pinecone>=8.0.0"]
all = [
    "openai>=1.53.0",
    "anthropic>=0.74.1",
    "google-generativeai>=0.8.5",
    "groq>=0.36.0",
    "ollama>=0.6.1",
    "aioboto3>=15.5.0",
    "txtai>=9.2.0",
    "chromadb>=1.3.5",
    "pinecone>=8.0.0",
    "pinecone-client>=4.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["think"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=think --no-cov-on-fail"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pyright]
typeCheckingMode = "off"

[dependency-groups]
dev = [
    "aioboto3>=15.5.0",
    "anthropic>=0.74.1",
    "chromadb>=1.3.5",
    "coverage>=7.12.0",
    "google-generativeai>=0.8.5",
    "groq>=0.36.0",
    "ollama>=0.6.1",
    "pinecone>=8.0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-coverage>=0.0",
    "ruff>=0.14.6",
    "txtai>=9.2.0",
    "ty>=0.0.1a27",
]
